# timelake

./: .gitignore  README.md  Timelake.ipynb  main.py  pyproject.toml
notebooks/: Delta Table.ipynb  Time Lake.ipynb
tests/: test_catalog.py  test_core.py  test_preprocessor.py  test_storage.py
timelake/: __init__.py  base.py  catalog.py  constants.py  core.py  models.py  preprocessor.py  storage.py  utils.py
timelake/src/: core.py
