[project]
name = "timelake"
version = "0.1.0"
description = "A time series feature framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.25.5",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "pytest (>=8.3.5,<9.0.0)",
]
